# cod-meta

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: cod-meta-AutoDeployTrigger-ea071bea-da6c-489b-989a-b03d8977a1df.yml
app/: __init__.py  config.py  utils.py
app/routers/: health.py  metadata.py
